parallax and highlight init finished, to fill contents

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://use.typekit.net/ljj0mil.css">
     <link rel="stylesheet" href="./master.css">
-    <script src="./nav.js" charset="utf-8"></script>
-    <script src="./control.js" charset="utf-8"></script>
+    <script src="./master.js" charset="utf-8"></script>
     <title>Anonym ONE</title>
   </head>
   <body>
@@ -26,7 +25,7 @@
         </div>
       </div>
       <div class="wrapper-center">
-
+        <div class="background-layer0"></div>
         <div class="background sec-1"></div>
 
         <div class="wrapper main" id="anchor_main">
@@ -71,26 +70,46 @@
             <h1>Some Invented Hobbies</h1>
           </div>
           <div class="hobby-sec hob-1">
-            <img src="./resources/sample.jpg" alt="">
-            <h1><span>//</span>Hobby 1</h1>
-            <p>Some explaining text</p>
+            <img src="" alt="">
+            <h1><span> // </span>Hobby 1</h1>
+            <p>Some explaining textSome explaining textSome explaining textSome explaining textSome explaining text</p>
           </div>
           <div class="hobby-sec hob-2">
-            <img src="./resources/sample.jpg" alt="">
-            <h1><span>//</span>Hobby 2</h1>
-            <p>Some explaining text</p>
+            <img src="" alt="">
+            <h1><span> // </span>Hobby 2</h1>
+            <p>Some explaining textSome explaining textSome explaining text</p>
           </div>
           <div class="hobby-sec hob-3">
-            <img src="./resources/sample.jpg" alt="">
-            <h1><span>//</span>Hobby 3</h1>
-            <p>Some explaining text</p>
+            <img src="" alt="">
+            <h1><span> // </span>Hobby 3</h1>
+            <p>Some explaining textSome explaining textSome explaining textSome explaining textSome explaining textSome explaining textSome explaining textSome explaining text</p>
           </div>
         </div>
 
         <div class="background sec-4"></div>
 
         <div class="wrapper cw" id="anchor_cw">
-          C
+          <div class="cw title">
+            <h1>Coursework and Report</h1>
+          </div>
+          <div class="hobby-sec cw-1">
+            <img src="" alt="">
+            <h1>Lab 3 - Html & CSS</h1>
+            <p>Hover to preview</p>
+            <a href="#">Detail >></a>
+          </div>
+          <div class="hobby-sec cw-2">
+            <img src="" alt="">
+            <h1>Lab 4 - Bouncing Ball</h1>
+            <p>Hover to preview</p>
+            <a href="#">Detail >></a>
+          </div>
+          <div class="hobby-sec cw-3">
+            <img src="" alt="">
+            <h1>The Report</h1>
+            <p>Hover to preview</p>
+            <a href="#">Detail >></a>
+          </div>
         </div>
 
         <div class="background sec-5"></div>
