--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://use.typekit.net/ljj0mil.css">
     <link rel="stylesheet" href="./master.css">
+    <script src="./animation.js" charset="utf-8"></script>
     <script src="./master.js" charset="utf-8"></script>
+    <script src="./raphael.js" charset="utf-8"></script>
     <title>Anonym ONE</title>
   </head>
   <body>
@@ -25,30 +27,29 @@
         </div>
       </div>
       <div class="wrapper-center">
-        <div class="background-layer0"></div>
-        <div class="background sec-1"></div>
 
-        <div class="wrapper main" id="anchor_main">
+        <div class="wrapper wrapper-main" id="anchor_main">
           <div class="main title">
-            <h1>The Anonymous Page</h1>
+            <h1>The <span class="gold">Anonymous</span> Page</h1>
+          </div>
+          <div class="main-image">
+            <img src="./resources/main-img.jpg" alt="Ghostwriter">
           </div>
           <div class="main-text">
             <p>This should be a homepage for someone. However, it's the requirement to keep anonymous. So it became the anonymous page. All personalized information was made up and not referring to anyone.</p>
           </div>
-          <div class="main-image">
-
+          <div class="main-copyright">
+            <p>by Andrey Popov, Adobe Stock</p>
           </div>
         </div>
 
-        <div class="background sec-2"></div>
-
-        <div class="wrapper video" id="anchor_video">
+        <div class="wrapper wrapper-video" id="anchor_video">
           <div class="video title">
-            <h1>The Introducion Video</h1>
+            <h1>The Introducion <span class="gold">Video</span></h1>
           </div>
           <div class="wrapper-video">
             <div class="video-video">
-              <video id="theVideo" src="./resources/testvideo.mp4" autoplay>
+              <video id="theVideo" src="./resources/testvideo.mp4" poster="./resources/videoposter.jpg" autoplay>
               </video>
               <div id="prog-bar">
                 <div id="prog"></div>
@@ -63,60 +64,54 @@
           </div>
         </div>
 
-        <div class="background sec-3"></div>
 
-        <div class="wrapper hobbies" id="anchor_hobbies">
+        <div class="wrapper wrapper-hobbies" id="anchor_hobbies">
           <div class="hobby title">
-            <h1>Some Invented Hobbies</h1>
+            <h1>Some <span class="gold">Invented</span> Hobbies</h1>
           </div>
           <div class="hobby-sec hob-1">
-            <img src="" alt="">
-            <h1><span> // </span>Hobby 1</h1>
-            <p>Some explaining textSome explaining textSome explaining textSome explaining textSome explaining text</p>
+            <img src="./resources/hobbies-img1.jpg" alt="">
+            <h1><span class="capital gold"> // </span>Swimming</h1>
+            <p>Every morning this guy wake up at 5am and go swimming for half an hour.</p>
           </div>
           <div class="hobby-sec hob-2">
-            <img src="" alt="">
-            <h1><span> // </span>Hobby 2</h1>
-            <p>Some explaining textSome explaining textSome explaining text</p>
-          </div>
-          <div class="hobby-sec hob-3">
-            <img src="" alt="">
-            <h1><span> // </span>Hobby 3</h1>
-            <p>Some explaining textSome explaining textSome explaining textSome explaining textSome explaining textSome explaining textSome explaining textSome explaining text</p>
+            <img src="./resources/hobbies-img2.jpg" alt="">
+            <h1><span class="capital gold"> // </span>Dancing</h1>
+            <p>Every night this guy dances with his cats.</p>
           </div>
         </div>
 
-        <div class="background sec-4"></div>
-
-        <div class="wrapper cw" id="anchor_cw">
+        <div class="wrapper wrapper-cw" id="anchor_cw">
           <div class="cw title">
-            <h1>Coursework and Report</h1>
+            <h1><span class="gold">Coursework</span> and <span class="gold">Report</span></h1>
           </div>
           <div class="hobby-sec cw-1">
-            <img src="" alt="">
             <h1>Lab 3 - Html & CSS</h1>
-            <p>Hover to preview</p>
+            <img src="./resources/cw-preview-1.jpg" alt="">
             <a href="#">Detail >></a>
           </div>
           <div class="hobby-sec cw-2">
-            <img src="" alt="">
             <h1>Lab 4 - Bouncing Ball</h1>
-            <p>Hover to preview</p>
+            <img src="./resources/cw-preview-2.jpg" alt="">
             <a href="#">Detail >></a>
           </div>
           <div class="hobby-sec cw-3">
-            <img src="" alt="">
             <h1>The Report</h1>
-            <p>Hover to preview</p>
+            <img src="./resources/cw-preview-3.jpg" alt="">
             <a href="#">Detail >></a>
           </div>
         </div>
 
-        <div class="background sec-5"></div>
 
-        <div class="wrapper animation" id="anchor_animation">
-          D
+        <div class="wrapper wrapper-animation" id="anchor_animation">
+          <div class="animation title">
+            <h1>The SVG <span class="gold">animation</span></h1>
+          </div>
+          <div class="svg">
+
+          </div>
         </div>
+
       </div>
     </div>
   </body>
