--- a/index.html
+++ b/index.html
@@ -110,6 +110,10 @@
           <div class="svg">
 
           </div>
+          <div class="svg-audio">
+            <audio src="./resources/Funk-tabulous.mp3" autoplay="false" controls="false">
+            </audio>
+          </div>
         </div>
 
       </div>
