PROG: site finished; TODO: add 3 file links

--- a/index.html
+++ b/index.html
@@ -107,9 +107,11 @@
           <div class="animation title">
             <h1>The SVG <span class="gold">animation</span></h1>
           </div>
+          <div class="svg-mute"><p>Mute</p></div>
           <div class="svg">
 
           </div>
+
           <div class="svg-audio">
             <audio src="./resources/Funk-tabulous.mp3" autoplay="false" controls="false">
             </audio>
