PROG: edge compatibility fix

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           </div>
           <div class="wrapper-video">
             <div class="video-video">
-              <video id="theVideo" src="./resources/testvideo.mp4" poster="./resources/videoposter.jpg" autoplay>
+              <video id="theVideo" src="./resources/testvideo.mp4" poster="./resources/videoposter.jpg">
               </video>
               <div id="prog-bar">
                 <div id="prog"></div>
